--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Tramodana</title>
   <link rel="icon" type="image/png" href="/images/favicon.png" />
   <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Libre+Franklin" rel="stylesheet">
 </head>
 
 <body>
