First attempt at fixing BpmnViewer wrapper

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,20 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tramodana</title>
-  <link rel="icon" type="image/png" href="/images/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Libre+Franklin" rel="stylesheet">
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:200" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,500,600" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+    <title>Tramodana</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="/dist/bundle.js"></script>
+    <div id="app"></div>
+    <script src="/bundle.js"></script>
 </body>
 
 </html>
